--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>this is my first project</h1>
     <h2>Look mama,I am using github</h2>
     <h3>ok, i agree with you</h3>
+    <p>Let's go for a party</p>
 </body>
 </html>
