--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>Look mama,I am using github</h2>
     <h3>ok, i agree with you</h3>
     <p>Let's go for a party</p>
+    <img src="flag.png" alt="">
 </body>
 </html>
