--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>Let's go for a party</p>
     <p>talking from my second branch</p>
     <p>this line added in my second branch</p>
+    <p>added more code in the second branch</p>
     <img src="flag.png" alt="">
 </body>
 </html>
