cangingt the same thing

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h2>Look mama,I am using github</h2>
     <h3>ok, i agree with you</h3>
     <p>Let's go for a party</p>
-    <p>talking from my second branch</p>
-    <p>this line added in my second branch</p>
+    <p>talking from my second updated again branch</p>
+    <p>this line added in my another branch</p>
     <p>added more code in the second branch</p>
     <img src="flag.png" alt="">
 </body>
